# ultimate_rust

./: Cargo.toml  README.md
misc/closures/src/: main.rs
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/functions/src/: main.rs
session1/login/: Cargo.toml  users.json
session1/login/src/: main.rs
session1/login_manager/: Cargo.toml  users.json
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/divide_work/src/: main.rs
session2/footgun/: Cargo.toml
session2/footgun/src/: main.rs
session2/hello/src/: main.rs
session2/mutexes/src/: main.rs
session2/rwlock/src/: main.rs
session3/hello_async/: Cargo.toml
session3/hello_async/src/: main.rs
session3/hello_tokio/: Cargo.toml
session3/hello_tokio/src/: main.rs
